# new-energy-hackathon-2025

./: .gitignore  Makefile  README.md  pyproject.toml
notebooks/: 1.0-jks-exploratory-data-analysis.ipynb
reports/: new-energy-hackathon-2025.bib  new-energy-hackathon-2025.md
src/new_energy_hackathon_2025/data/: download.py  preprocess.py
